fix: left alignment fix for onelink pages

--- a/src/pages/InvestorView/Company/Company.scss
+++ b/src/pages/InvestorView/Company/Company.scss
@@ -317,6 +317,13 @@
 //   }
 // }
 
+.border_left {
+  border: 0;
+  @media (min-width: 1000px) {
+    border-left: 1px solid rgba(230, 230, 230, 1);
+  }
+}
+
 .company__profile__container {
   background-color: #f9faf3;
 }
